- css class header, hero;  - steps.css (counter)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>WishList</title>
+    <link rel="stylesheet" href="style/index.css"/>
 </head>
-<body>
+<body class="body">
 <header class="header">
-    <div class="container">
+    <div class="container header_container">
         <img class="header_logo" src="image/логотип.svg" alt="логотип сервиса wishlist в виде буквы w">
         <nav class="header_nav nav">
             <button class="nav_btn btn">Зарегистрироваться</button>
@@ -19,7 +20,7 @@
 </header>
 <main class="main">
     <section class="hero">
-        <div class="container">
+        <div class="container hero_container">
             <h1 class="hero_title">WishList</h1>
             <p class="hero_description">
                 Никогда не поздно поставить новую цель или обрести новую мечту...
