- css section wishlist

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <ul class="wishlist_categories categories">
                 <li class="categories_item">
                     <h3 class="categories_title">Гаджеты</h3>
-                    <ul class="wishlist_item">
+                    <ul class="wishlist_items">
                         <li class="item">
                             <img src="image/наушники%202.png" alt="bugs" class="item_image"/>
                             <h4 class="item_title">Xiaomi Redmi Buds 4 Pro </h4>
@@ -84,7 +84,7 @@
                 </li>
                 <li class="categories_item">
                     <h3 class="categories_title">Хобби</h3>
-                    <ul class="wishlist_item">
+                    <ul class="wishlist_items">
                         <li class="item">
                             <img src="image/наушники%202.png" alt="bugs" class="item_image"/>
                             <h4 class="item_title">Xiaomi Redmi Buds 4 Pro </h4>
