- css style for edit

--- a/index.html
+++ b/index.html
@@ -156,19 +156,22 @@
 
                 <fieldset class="edit_birthdate">
                     <legend class="edit_label">Дата рождения:</legend>
-                    <label class="edit_label">
+                    <label class="edit_label edit_label_select">
                         <select type="text" class="edit_select" name="day">
-
+                            <option value="1">one</option>
+                            <option value="2">two</option>
                         </select>
                     </label>
-                    <label class="edit_label">
+                    <label class="edit_label edit_label_select">
                         <select type="text" class="edit_select" name="month">
-
+                            <option value="1">one</option>
+                            <option value="2">two</option>
                         </select>
                     </label>
-                    <label class="edit_label">
+                    <label class="edit_label edit_label_select">
                         <select type="text" class="edit_select" name="year">
-
+                            <option value="1">one</option>
+                            <option value="2">two</option>
                         </select>
                     </label>
                 </fieldset>
