- createEditProfile in process  - add createSelectDate function

--- a/indexCopy.html
+++ b/indexCopy.html
@@ -157,24 +157,26 @@
 
                 <fieldset class="edit_birthdate">
                     <legend class="edit_label-text">Дата рождения:</legend>
-                    <label class="edit_label edit_label_select">
-                        <select type="text" class="edit_select" name="day">
-                            <option value="1">one</option>
-                            <option value="2">two</option>
-                        </select>
-                    </label>
-                    <label class="edit_label edit_label_select">
-                        <select type="text" class="edit_select" name="month">
-                            <option value="1">one</option>
-                            <option value="2">two</option>
-                        </select>
-                    </label>
-                    <label class="edit_label edit_label_select">
-                        <select type="text" class="edit_select" name="year">
-                            <option value="1">one</option>
-                            <option value="2">two</option>
-                        </select>
-                    </label>
+                    <div class="edit_birthday-wrapper">
+                        <label class="edit_label edit_label_select">
+                            <select type="text" class="edit_select" name="day">
+                                <option value="1">one</option>
+                                <option value="2">two</option>
+                            </select>
+                        </label>
+                        <label class="edit_label edit_label_select">
+                            <select type="text" class="edit_select" name="month">
+                                <option value="1">one</option>
+                                <option value="2">two</option>
+                            </select>
+                        </label>
+                        <label class="edit_label edit_label_select">
+                            <select type="text" class="edit_select" name="year">
+                                <option value="1">one</option>
+                                <option value="2">two</option>
+                            </select>
+                        </label>
+                    </div>
                 </fieldset>
 
                 <fieldset class="edit_description">
