- Wish edit form render

--- a/indexCopy.html
+++ b/indexCopy.html
@@ -200,12 +200,12 @@
                         <span class="edit_label-text">Категория:</span>
                         <input type="text" class="edit_input" name="category">
                     </label>
-                    <div class="edit_label edit__wish-price">
-                        <label class="edit_label_price">
+                    <div class="edit__wish-price">
+                        <label class="edit_label edit_label_price">
                             <span class="edit_label-text">Цена:</span>
                             <input type="text" class="edit_input" name="price">
                         </label>
-                        <label class="edit_label_select edit_label_price">
+                        <label class="edit_label edit_label_select edit_label_price">
                             <select name="currency" class="edit_select edit_select_currency">
                                 <option value="руб">руб</option>
                             </select>
